# Frosty-OS

./: .gitignore  CMakeLists.txt  README.md  bootloader.asm  build.sh  compile.sh  hello.txt  kernel.c  limine.conf  linker.ld  run.sh  start.s
kernel/: limine.h  linker.ld  main.cpp
kernel/arch/: io.hpp  simd.hpp
kernel/drivers/: input.hpp  speaker.hpp
kernel/gfx/: canvas.hpp  font.hpp  types.hpp
kernel/gui/: theme.hpp  widget.hpp  window.hpp
kernel/math/: math.hpp
